# cs2-dumper

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  Cargo.toml  LICENSE  README.md  animationsystem_dll.cs  animationsystem_dll.hpp  animationsystem_dll.json  animationsystem_dll.rs  buttons.cs  buttons.hpp  buttons.json  buttons.rs  client_dll.cs  client_dll.hpp  client_dll.rs  cmake.toml  config.json  config_linux.json  config_win.json  engine2_dll.cs  engine2_dll.hpp  engine2_dll.rs  host_dll.cs  host_dll.hpp  host_dll.rs  info.json  interfaces.cs  interfaces.hpp  interfaces.json  interfaces.rs  materialsystem2_dll.cs  materialsystem2_dll.hpp  materialsystem2_dll.rs  networksystem_dll.cs  networksystem_dll.hpp  (+43 more)
.github/workflows/: rust.yml
classes/: client.dll.hpp  engine2.dll.hpp  networksystem.dll.hpp  pulse_system.dll.hpp  schemasystem.dll.hpp  worldrenderer.dll.hpp
docs/plans/: README.md
generated_linux/: interfaces.cs  interfaces.hpp  interfaces.json  interfaces.py  interfaces.rs  interfaces.yaml  libanimationsystem.so.cs  libanimationsystem.so.hpp  libanimationsystem.so.json  libanimationsystem.so.py  libanimationsystem.so.rs  libanimationsystem.so.yaml  libclient.so.cs  libclient.so.hpp  libclient.so.json  libclient.so.py  libclient.so.rs  libclient.so.yaml  libengine2.so.cs  libengine2.so.hpp  libengine2.so.json  libengine2.so.py  libengine2.so.rs  libengine2.so.yaml  libhost.so.cs  libhost.so.hpp  libhost.so.py  libhost.so.rs  libhost.so.yaml  libmaterialsystem2.so.cs  libmaterialsystem2.so.hpp  libmaterialsystem2.so.py  libmaterialsystem2.so.rs  libnetworksystem.so.cs  libnetworksystem.so.hpp  libnetworksystem.so.json  libnetworksystem.so.py  libnetworksystem.so.rs  libnetworksystem.so.yaml  libparticles.so.cs  (+60 more)
include/: process.hpp
include/base/: safe_handle.hpp
include/builder/: builder.hpp  cpp_file_builder.hpp  csharp_file_builder.hpp  i_file_builder.hpp  json_file_builder.hpp  rust_file_builder.hpp
include/sdk/: c_schema_class_field_data.hpp  c_schema_class_info.hpp  c_schema_system.hpp  c_schema_system_type_scope.hpp  c_schema_type_declared_class.hpp  schema_class_field_data.hpp  schema_class_info.hpp  schema_system.hpp  schema_system_type_scope.hpp  schema_type_declared_class.hpp  sdk.hpp  (+1 more)
output/: animation_defuse.hpp  animationsystem.dll.cs  animationsystem.dll.hpp  animationsystem.dll.json  animationsystem.dll.rs  animationsystem_dll.cs  animationsystem_dll.hpp  animationsystem_dll.json  animationsystem_dll.rs  animationsystem_dll.zig  buttons.cs  buttons.hpp  buttons.json  buttons.rs  buttons.zig  client.dll.cs  client.dll.hpp  client.dll.json  client.dll.rs  client_dll.cs  client_dll.hpp  client_dll.json  client_dll.rs  client_dll.zig  cs2_offsets.hpp  desktop.ini  engine2.dll.cs  engine2.dll.hpp  engine2.dll.json  engine2.dll.rs  engine2_dll.cs  engine2_dll.hpp  engine2_dll.json  engine2_dll.rs  engine2_dll.zig  host.dll.cs  host.dll.hpp  host.dll.json  host.dll.rs  host_dll.cs  (+222 more)
src/: config.rs  error.rs  main.cpp  main.rs  mem.rs  process.cpp  reader.rs
(+371 files in other folders)
