[package]
name = "cs2-dumper"
version = "1.1.5"
authors = ["a2x"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/a2x/cs2-dumper"
license = "MIT"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.4", features = ["derive"] }
goblin = { git = "https://github.com/m4b/goblin" }
lazy_static = "1.4"
log = "0.4"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simplelog = { version = "0.12", features = ["paris"] }

[dependencies.windows]
version = "0.54"
features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
]

[profile.release]
strip = true
