[package]
name = "cs2-dumper"
version = "0.1.0"
authors = ["a2x"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/a2x/cs2-dumper"
license = "MIT"

[dependencies]
bitflags = { version = "2.5", features = ["serde"] }
clap = { version = "4.5", features = ["cargo"] }
chrono = { version = "0.4", features = ["serde"] }
heck = "0.5"
log = "0.4"
memflow = "0.2"
memflow-native = { git = "https://github.com/memflow/memflow-native" }
pelite = "0.10"
phf = { version = "0.11", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simplelog = "0.12"
thiserror = "1.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
strip = true
